# Framer

./: CMakeLists.txt  Makefile  common.h  framer.cpp  framer.h  framer_receive.cpp  framer_receive.h  framer_send.cpp  framer_send.h  framer_transmit.cpp  framer_transmit.h  functions.c  functions.cpp  functions.h  receiver.c  receiver.h  sender.c  sender.h
.github/workflows/: compile.yml
